fix(BoardPane): fix deck card layout problem